--- a/Landing Pages/LP-Template.html
+++ b/Landing Pages/LP-Template.html
@@ -74,9 +74,9 @@
           <div class="col-md-4">
             <div class="widget no-border m-0">
               <ul class="styled-icons icon-dark icon-circled icon-theme-colored icon-sm flip sm-pull-none sm-text-center mt-sm-15">
-                <li><a href="https://www.facebook.com/travelearnerscolombia"><i class="fa fa-facebook text-white"></i></a></li>
-                <li><a href="https://twitter.com/travelearners"><i class="fa fa-twitter text-white"></i></a></li>
-                <li><a href="https://www.instagram.com/TRAVELEARNERS/"><i class="fa fa-instagram text-white"></i></a></li>
+                <li><a href="https://www.facebook.com/travelearnerscolombia"><i class="fa fa-facebook text-white social-icon"></i></a></li>
+                <li><a href="https://twitter.com/travelearners"><i class="fa fa-twitter text-white social-icon"></i></a></li>
+                <li><a href="https://www.instagram.com/TRAVELEARNERS/"><i class="fa fa-instagram text-white social-icon"></i></a></li>
               </ul>
             </div>
           </div>
@@ -119,27 +119,29 @@
               <li class="active"><a href="index.html">Inicio</a></li>
               <li><a href="#">Destinos</a>
                 <ul class="dropdown">
-                  <li><a href="#">Estados Unidos</a></li>
-                  <li><a href="#">Australia</a></li>
-                  <li><a href="#">Inglaterra</a></li>
-                  <li><a href="#">Canadá</a></li>
-                  <li><a href="#">Nueva Zelanda</a></li>
-                  <li><a href="#">Malta</a></li>
-                  <li><a href="#">Irlanda</a></li>
-                  <li><a href="#">Sudáfrica</a></li>
-                  <li><a href="#">Francia</a></li>
-                  <li><a href="#">Alemania</a></li>
+                  <li><a href="../Countries/Germany.html">Alemania</a></li>
+                  <li><a href="../Countries/Australia.html">Australia</a></li>
+                  <li><a href="../Countries/Canada.html">Canadá</a></li>
+                  <li><a href="../Countries/UnitedStates.html">Estados Unidos</a></li>
+                  <li><a href="../Countries/France.html">Francia</a></li>
+                  <li><a href="../Countries/England.html">Inglaterra</a></li>
+                  <li><a href="../Countries/Ireland.html">Irlanda</a></li>
+                  <li><a href="../Countries/Italy.html">Italia</a></li>
+                  <li><a href="../Countries/Malta.html">Malta</a></li>
+                  <li><a href="../Countries/Newzealand.html">Nueva Zelanda</a></li>
+                  <li><a href="../Countries/Southafrica.html">Sudáfrica</a></li>
                 </ul>
               </li>
               <li><a href="#">Cursos en el Exterior</a>
                 <ul class="dropdown">
-                  <li><a href="#">Cursos inglés general e intensivo</a></li>
-                  <li><a href="#">Preparación de IELTS y TOEFL</a></li>
-                  <li><a href="#">Preparación de Exámenes Cambridge</a></li>
-                  <li><a href="#">Inglés de Negocios</a></li>
-                  <li><a href="#">Preparación Universitaria</a></li>
-                  <li><a href="#">Campamentos de Verano</a></li>
-                  <li><a href="#">Cursos de Francés, Alemán y otros idiomas</a></li>
+                  <li><a href="../Programs/InglesIntensivo.html">Cursos inglés general e intensivo</a></li>
+                  <li><a href="../Programs/PreparacionTOEFL.html">Preparación de IELTS y TOEFL</a></li>
+                  <li><a href="../Programs/PreparacionCAMBRIDGE.html">Preparación de exámenes Cambridge</a></li>
+                  <li><a href="../Programs/InglesNegocios.html">Inglés de negocios</a></li>
+                  <li><a href="../Programs/PreparacionUniversitaria.html">Preparación universitaria</a></li>
+                  <li><a href="../Programs/CampamentosVerano.html">Campamentos de verano</a></li>
+                  <li><a href="../Programs/CursosIdiomas.html">Cursos de francés, alemán y otros idiomas</a></li>
+                  <li><a href="../Programs/EducacionExterior.html">Educación superior en el exterior</a></li>
                 </ul>
               </li>
               <li><a href="#">Testimonios</a></li>
