--- a/cotizacion.html
+++ b/cotizacion.html
@@ -78,9 +78,9 @@
           <div class="col-md-4">
             <div class="widget no-border m-0">
               <ul class="styled-icons icon-dark icon-circled icon-theme-colored icon-sm flip sm-pull-none sm-text-center mt-sm-15">
-                <li><a href="https://www.facebook.com/travelearnerscolombia"><i class="fa fa-facebook text-white"></i></a></li>
-                <li><a href="https://twitter.com/travelearners"><i class="fa fa-twitter text-white"></i></a></li>
-                <li><a href="https://www.instagram.com/TRAVELEARNERS/"><i class="fa fa-instagram text-white"></i></a></li>
+                <li><a href="https://www.facebook.com/travelearnerscolombia"><i class="fa fa-facebook text-white social-icon"></i></a></li>
+                <li><a href="https://twitter.com/travelearners"><i class="fa fa-twitter text-white social-icon"></i></a></li>
+                <li><a href="https://www.instagram.com/TRAVELEARNERS/"><i class="fa fa-instagram text-white social-icon"></i></a></li>
               </ul>
             </div>
           </div>
@@ -138,14 +138,14 @@
               </li>
               <li><a href="#cursos">Cursos en el Exterior</a>
                 <ul class="dropdown">
+                  <li><a href="Programs/InglesIntensivo.html">Cursos inglés general e intensivo</a></li>
+                  <li><a href="Programs/PreparacionTOEFL.html">Preparación de IELTS y TOEFL</a></li>
+                  <li><a href="Programs/PreparacionCAMBRIDGE.html">Preparación de exámenes Cambridge</a></li>
+                  <li><a href="Programs/InglesNegocios.html">Inglés de negocios</a></li>
+                  <li><a href="Programs/PreparacionUniversitaria.html">Preparación universitaria</a></li>
                   <li><a href="Programs/CampamentosVerano.html">Campamentos de verano</a></li>
                   <li><a href="Programs/CursosIdiomas.html">Cursos de francés, alemán y otros idiomas</a></li>
-                  <li><a href="Programs/InglesIntensivo.html">Cursos inglés general e intensivo</a></li>
                   <li><a href="Programs/EducacionExterior.html">Educación superior en el exterior</a></li>
-                  <li><a href="Programs/InglesNegocios.html">Inglés de negocios</a></li>
-                  <li><a href="Programs/PreparacionCAMBRIDGE.html">Preparación de exámenes Cambridge</a></li>
-                  <li><a href="Programs/PreparacionTOEFL.html">Preparación de IELTS y TOEFL</a></li>
-                  <li><a href="Programs/PreparacionUniversitaria.html">Preparación universitaria</a></li>
                 </ul>
               </li>
               <li><a href="testimony.html">Testimonios</a></li>
@@ -664,6 +664,22 @@
                 <textarea id="00N0f00000FcTpR" name="00N0f00000FcTpR" type="text" wrap="soft" class="form-control" rows="5" placeholder="¿Tienes alguna pregunta? Por favor escríbela aquí y te ayudaremos."></textarea>
               </div>
               <div class="form-group">
+                <div class="row">   
+                  <div class="col-sm-12">
+                    <div class="form-group">
+                      <input type="checkbox" required  checked="checked" name="emailOptOut"  value="1"/> Estoy de acuerdo con la política de manejo de la información
+                    </div>
+                  </div> 
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="row">   
+                  <div class="col-sm-12 text-center">
+                    <a href="infopolicy.html" class="font-13">Política del manejo de la información</a>
+                  </div> 
+                </div>  
+              </div>
+              <div class="form-group">
                 <input type="submit" name="submit" class="btn btn-dark btn-theme-colored btn-flat mr-5" class="form-control" value="Enviar"/>
               </div>
             </form>
@@ -857,7 +873,7 @@
       <div class="row border-bottom-black">
         <div class="col-sm-6 col-md-3">
           <div class="widget dark">
-            <img class="mt-10 mb-20" alt="" src="images/logo.png">
+            <img class="mt-10 mb-20" alt="" src="images/Logo-White.png">
             <select id="selectMe" class="RegionSelectBox">
               <option value="option1" class="RegionSelect">Bogota</option>
               <option value="option2" class="RegionSelect">Cali</option>
@@ -917,7 +933,7 @@
       </div>
       <div class="row mt-10">
         <div class="col-md-5">
-          <div class="widget dark">
+          <!-- <div class="widget dark">
             <h5 class="widget-title mb-10">Comparte tu correo</h5>
             <form action="https://www.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST" class="newsletter-form">
               <input type=hidden name="oid" value="00DG0000000hoSt">
@@ -929,7 +945,7 @@
                 </span>
               </div>
             </form>
-          </div>
+          </div> -->
         </div>
         <div class="col-md-3 col-md-offset-1">
           <p><i>"Experience, travel - these are an education in themselves"</i> -- Euripides</p>
