--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
           <div class="col-md-4">
             <div class="widget no-border m-0">
               <ul class="styled-icons icon-dark icon-circled icon-theme-colored icon-sm flip sm-pull-none sm-text-center mt-sm-15">
-                <li><a href="https://www.facebook.com/travelearnerscolombia"><i class="fa fa-facebook text-white"></i></a></li>
-                <li><a href="https://twitter.com/travelearners"><i class="fa fa-twitter text-white"></i></a></li>
-                <li><a href="https://www.instagram.com/TRAVELEARNERS/"><i class="fa fa-instagram text-white"></i></a></li>
+                <li><a href="https://www.facebook.com/travelearnerscolombia"><i class="fa fa-facebook text-white social-icon"></i></a></li>
+                <li><a href="https://twitter.com/travelearners"><i class="fa fa-twitter text-white social-icon"></i></a></li>
+                <li><a href="https://www.instagram.com/TRAVELEARNERS/"><i class="fa fa-instagram text-white social-icon"></i></a></li>
               </ul>
             </div>
           </div>
@@ -138,20 +138,23 @@
               </li>
               <li><a href="#cursos">Cursos en el Exterior</a>
                 <ul class="dropdown">
+                  <li><a href="Programs/InglesIntensivo.html">Cursos inglés general e intensivo</a></li>
+                  <li><a href="Programs/PreparacionTOEFL.html">Preparación de IELTS y TOEFL</a></li>
+                  <li><a href="Programs/PreparacionCAMBRIDGE.html">Preparación de exámenes Cambridge</a></li>
+                  <li><a href="Programs/InglesNegocios.html">Inglés de negocios</a></li>
+                  <li><a href="Programs/PreparacionUniversitaria.html">Preparación universitaria</a></li>
                   <li><a href="Programs/CampamentosVerano.html">Campamentos de verano</a></li>
                   <li><a href="Programs/CursosIdiomas.html">Cursos de francés, alemán y otros idiomas</a></li>
-                  <li><a href="Programs/InglesIntensivo.html">Cursos inglés general e intensivo</a></li>
                   <li><a href="Programs/EducacionExterior.html">Educación superior en el exterior</a></li>
-                  <li><a href="Programs/InglesNegocios.html">Inglés de negocios</a></li>
-                  <li><a href="Programs/PreparacionCAMBRIDGE.html">Preparación de exámenes Cambridge</a></li>
-                  <li><a href="Programs/PreparacionTOEFL.html">Preparación de IELTS y TOEFL</a></li>
-                  <li><a href="Programs/PreparacionUniversitaria.html">Preparación universitaria</a></li>
                 </ul>
               </li>
               <li><a href="testimony.html">Testimonios</a></li>
               <li><a href="about-us.html">Acerca de Nosotros</a></li>
               <li><a href="contact.html">Contacto</a></li>
               <li><a href="http://www.travelearners.com/blog">Blog</a></li>
+              <li class="list-inline pull-right flip hidden-lg hidden-md">
+                <a id="btn-coti" class="btn btn-colored btn-flat btn-theme-colored mt-15" href="cotizacion.html">Pide tu cotización</a>
+              </li>
             </ul>
             <ul class="list-inline pull-right flip hidden-sm hidden-xs">
               <li>
@@ -800,7 +803,7 @@
                 <div class="row">   
                   <div class="col-sm-12">
                     <div class="form-group">
-                      <input type="checkbox" required  checked="checked" name="emailOptOut"  value="1"/> Si, deseo que me envíen la información solicitada
+                      <input type="checkbox" required  checked="checked" name="emailOptOut"  value="1"/> Estoy de acuerdo con la política de manejo de la información
                     </div>
                   </div> 
                 </div>
@@ -1166,16 +1169,16 @@
       <div class="row border-bottom-black">
         <div class="col-sm-6 col-md-3">
           <div class="widget dark">
-            <img class="mt-10 mb-20" alt="" src="images/logo.png">
-            <select id="selectMe" class="RegionSelectBox">
+            <img class="mt-10 mb-20" alt="" src="images/Logo-White.png">
+            <select id="selectMe" class="RegionSelectBox text-white">
               <option value="option1" class="RegionSelect">Bogota</option>
               <option value="option2" class="RegionSelect">Cali</option>
             </select>
             <div id="option1" class="group">  
               <ul class="list-inline mt-5">
-                <li class="m-0 pl-10 pr-10"><i class="fa fa-map-o text-theme-colored mr-5"></i>Calle 116 #45-67</li>
-                <li class="m-0 pl-10 pr-10"> <i class="fa fa-phone text-theme-colored mr-5"></i> <a class="text-gray" href="tel:031-300-1720">(1) 300 1720</a> </li>
-                <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-theme-colored mr-5"></i> <a class="text-gray" href="info@travelearners.com">info@travelearners.com</a> </li>
+                <li class="m-0 pl-10 pr-10 text-white"><i class="fa fa-map-o text-theme-colored mr-5"></i>Calle 116 #45-67</li>
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-phone text-theme-colored mr-5"></i> <a class="text-white" href="tel:031-300-1720">(1) 300 1720</a> </li>
+                <li class="m-0 pl-10 pr-10"> <i class="fa fa-envelope-o text-theme-colored mr-5"></i> <a class="text-white" href="info@travelearners.com">info@travelearners.com</a> </li>
               </ul>
             </div>
             <div id="option2" class="group">
@@ -1211,7 +1214,7 @@
         <div class="col-sm-6 col-md-3">
           <div class="widget dark">
             <h5 class="widget-title line-bottom">Horario de Atención</h5>
-            <div class="opening-hours">
+            <div class="opening-hours text-white">
               <ul class="list-border">
                 <li class="clearfix"> <span> Lunes a Viernes :  </span>
                   <div class="value pull-right"> 9.00 am - 6.00 pm </div>
@@ -1226,19 +1229,6 @@
       </div>
       <div class="row mt-10">
         <div class="col-md-5">
-          <div class="widget dark">
-            <h5 class="widget-title mb-10">Comparte tu correo</h5>
-            <form action="https://www.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8" method="POST" class="newsletter-form">
-              <input type=hidden name="oid" value="00DG0000000hoSt">
-              <input type=hidden name="retURL" value="http://www.travelearners.com/thank-you.html">
-              <div class="input-group">
-                <input type="email" value="" name="email" placeholder="Correo electronico" class="form-control input-lg font-16" data-height="45px" id="mce-EMAIL-footer" onblur="validateEmail(this);" onchange="javascript:document.getElementById('email').value = this.value;" required>
-                <span class="input-group-btn">
-                  <button data-height="45px" class="btn btn-colored btn-theme-colored btn-xs m-0 font-14" type="submit" name="submit">Enviar</button>
-                </span>
-              </div>
-            </form>
-          </div>
         </div>
         <div class="col-md-3 col-md-offset-1">
           <p><i>"Experience, travel - these are an education in themselves"</i> -- Euripides</p>
